# rag-python-sdk-template

./: AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  windsfurrules.md
backend/: .env.example  .funcignore  .gitignore  deploy.sh  function_app.py  requirements.txt  run.sh
backend/agent/: embeddings.py  generator.py  qdrant_retriever.py  rag_agent.py
backend/blob_client/: __init__.py  client.py  validation.py
backend/ingestion/: __init__.py  chunkers.py  config.py
backend/tests/: conftest.py
backend/tests/unit/: test_rag_agent.py  test_validation.py
docs/: azure-deployment-tiers.md  branching-strategy.md
planning/: erd-template.md  plan.md
qdrant/: run.sh
